--- a/workspace/Example/Score-Unet-F1-test.ipynb
+++ b/workspace/Example/Score-Unet-F1-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "PosixPath('/home/paperspace')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,37 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def f2_score(y_true, y_pred, threshold=0.5):\n",
-    "    return fbeta_score(y_true, y_pred, 2, threshold)\n",
-    "\n",
-    "\n",
-    "def fbeta_score(y_true, y_pred, beta, threshold=None, dim=1, eps=1e-9):\n",
-    "    beta2 = beta**2\n",
-    "\n",
-    "    if threshold:\n",
-    "        y_pred = torch.ge(y_pred.float(), threshold).float()\n",
-    "    else:\n",
-    "        y_pred = y_pred.float()\n",
-    "    y_true = y_true.float()\n",
-    "\n",
-    "    true_positive = (y_pred * y_true).sum(dim=dim)\n",
-    "    precision = true_positive.div(y_pred.sum(dim=dim).add(eps))\n",
-    "    recall = true_positive.div(y_true.sum(dim=dim).add(eps))\n",
-    "#     print('Precision, recall', precision.mean(), recall.mean())\n",
-    "    fb = torch.mean(\n",
-    "        (precision*recall).\n",
-    "        div_(precision.mul(beta2) + recall + eps).\n",
-    "        mul_(1 + beta2))\n",
-    "    return fb, true_positive, precision, recall"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +134,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f2_score(y_true, y_pred, threshold=0.5):\n",
+    "    return fbeta_score(y_true, y_pred, 2, threshold)\n",
+    "\n",
+    "\n",
+    "def fbeta_score(y_true, y_pred, beta, threshold=None, eps=1e-9):\n",
+    "    beta2 = beta**2\n",
+    "\n",
+    "    if threshold:\n",
+    "        y_pred = torch.ge(y_pred.float(), threshold).float()\n",
+    "    else:\n",
+    "        y_pred = y_pred.float()\n",
+    "    y_true = y_true.float()\n",
+    "\n",
+    "    true_positive = (y_pred * y_true).sum()\n",
+    "    precision = true_positive/(y_pred.sum()+(eps))\n",
+    "    recall = true_positive/(y_true.sum()+eps)\n",
+    "    \n",
+    "    fb = (precision*recall)/(precision*beta2 + recall + eps)*(1+beta2)\n",
+    "    \n",
+    "    return fb, true_positive, precision, recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +174,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_true = torch.from_numpy(tc_s).float()\n",
+    "y_pred = torch.from_numpy(pc_s).float()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -183,104 +191,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# true_positive = (y_pred * y_true).sum()\n",
+    "eps=1e-9\n",
+    "true_positive = (y_pred * y_true).sum()\n",
+    "precision = true_positive/(y_pred.sum()+(eps))\n",
+    "recall = true_positive/(y_true.sum()+eps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beta2 = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fb = (precision*recall)/(precision*beta2 + recall + eps)*(1+beta2)\n",
+    "#     div_(precision.mul(beta2) + recall + eps).\n",
+    "#     mul_(1 + beta2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.21758458899316221, \n",
-       "     0     0     0  ...      0     0     0\n",
-       "     0     0     0  ...      0     0     0\n",
-       "     0     0     0  ...      0     0     0\n",
-       "        ...          ⋱          ...       \n",
-       "     0     0     0  ...      0     0     0\n",
-       "     0     0     0  ...      0     0     0\n",
-       "     0     0     0  ...      0     0     0\n",
-       " [torch.FloatTensor of size 600x800], \n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "           ...             ⋱             ...          \n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       " [torch.FloatTensor of size 600x800], \n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "           ...             ⋱             ...          \n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       " [torch.FloatTensor of size 600x800])"
+       "0.544933755922913"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f2_score(torch.from_numpy(tr_s), torch.from_numpy(pr_s))"
+    "fb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.04779947963577385, \n",
-       "     0     0     0  ...      0     0     0\n",
-       "     0     0     0  ...      0     0     0\n",
-       "     0     0     0  ...      0     0     0\n",
-       "        ...          ⋱          ...       \n",
-       "     0     0     0  ...      0     0     0\n",
-       "     0     0     0  ...      0     0     0\n",
-       "     0     0     0  ...      0     0     0\n",
-       " [torch.FloatTensor of size 600x800], \n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "           ...             ⋱             ...          \n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       " [torch.FloatTensor of size 600x800], \n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "           ...             ⋱             ...          \n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       "  0.0000  0.0000  0.0000  ...   0.0000  0.0000  0.0000\n",
-       " [torch.FloatTensor of size 600x800])"
+       "0.369281934231573"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f2_score(torch.from_numpy(tc_s), torch.from_numpy(pc_s))"
+    "precision"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(113578, 196558, 14040063, 49801)"
+       "0.7149756088603755"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "116812.0"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "true_positive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9869345795946747, 2912591.0, 0.9873300277596323, 0.9853559535799356)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fbeta_score(torch.from_numpy(tr_s), torch.from_numpy(pr_s), .5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6022242887302403, 116812.0, 0.369281934231573, 0.7149756088603755)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fbeta_score(torch.from_numpy(tc_s), torch.from_numpy(pc_s), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0, 0, 0)"
+      ]
+     },
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,48 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\tCar_TP += np.sum(np.logical_and(student_data_car == 1, truth_data_car == 1))\n",
-    "\tCar_FP += np.sum(np.logical_and(student_data_car == 1, truth_data_car == 0))\n",
-    "\tCar_TN += np.sum(np.logical_and(student_data_car == 0, truth_data_car == 0))\n",
-    "\tCar_FN += np.sum(np.logical_and(student_data_car == 0, truth_data_car == 1))\n",
-    "\n",
-    "\tRoad_TP += np.sum(np.logical_and(student_data_road == 1, truth_data_road == 1))\n",
-    "\tRoad_FP += np.sum(np.logical_and(student_data_road == 1, truth_data_road == 0))\n",
-    "\tRoad_TN += np.sum(np.logical_and(student_data_road == 0, truth_data_road == 0))\n",
-    "\tRoad_FN += np.sum(np.logical_and(student_data_road == 0, truth_data_road == 1))\n",
-    "\n",
-    "\tframes_processed+=1\n",
-    "\n",
-    "\n",
-    "# Generate results\n",
-    "Car_precision = Car_TP/(Car_TP+Car_FP)/1.0\n",
-    "Car_recall = Car_TP/(Car_TP+Car_FN)/1.0\n",
-    "Car_beta = 2\n",
-    "Car_F = (1+Car_beta**2) * ((Car_precision*Car_recall)/(Car_beta**2 * Car_precision + Car_recall))\n",
-    "Road_precision = Road_TP/(Road_TP+Road_FP)/1.0\n",
-    "Road_recall = Road_TP/(Road_TP+Road_FN)/1.0\n",
-    "Road_beta = 0.5\n",
-    "Road_F = (1+Road_beta**2) * ((Road_precision*Road_recall)/(Road_beta**2 * Road_precision + Road_recall))\n",
-    "\n",
-    "print (\"Car F score: %05.3f  | Car Precision: %05.3f  | Car Recall: %05.3f  |\\n\\\n",
-    "Road F score: %05.3f | Road Precision: %05.3f | Road Recall: %05.3f | \\n\\\n",
-    "Averaged F score: %05.3f\" %(Car_F,Car_precision,Car_recall,Road_F,Road_precision,Road_recall,((Car_F+Road_F)/2.0)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -349,9 +381,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Car F score: 0.589  | Car Precision: 0.366  | Car Recall: 0.695  |\n",
-      "Road F score: 0.986 | Road Precision: 0.987 | Road Recall: 0.985 | \n",
-      "Averaged F score: 0.788\n"
+      "Car F score: 0.721  | Car Precision: 0.445  | Car Recall: 0.853  |\n",
+      "Road F score: 0.996 | Road Precision: 0.996 | Road Recall: 0.994 | \n",
+      "Averaged F score: 0.858\n"
      ]
     }
    ],
