--- a/workspace/Example/lyft-unet-train29-f1.ipynb
+++ b/workspace/Example/lyft-unet-train29-f1.ipynb
@@ -76,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "S_PREFIX = '19-weights'"
+    "S_PREFIX = '29-weights'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,27 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['1', '2', '1', '2'], dtype='<U1')"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.concatenate([np.array(['1', '2']), np.array(['1', '2'])])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,29 +732,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def car_f(pred, targs):\n",
+    "def car_f_p_r(pred, targs):\n",
     "    mx,idx = torch.max(pred, 1)\n",
     "    return fbeta_score(targs==1, idx==1, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rd_f(pred, targs):\n",
     "    mx,idx = torch.max(pred, 1)\n",
-    "    return fbeta_score(targs==2, idx==2, 0.5)"
+    "    f,p,r = fbeta_score(targs==2, idx==2, 0.5)\n",
+    "    return f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,20 +783,18 @@
     "        y_pred = y_pred.float()\n",
     "    y_true = y_true.float()\n",
     "\n",
-    "    true_positive = (y_pred * y_true).sum(dim=1)\n",
-    "    precision = true_positive.div(y_pred.sum(dim=1).add(eps))\n",
-    "    recall = true_positive.div(y_true.sum(dim=1).add(eps))\n",
-    "#     print('Precision, recall', precision.mean(), recall.mean())\n",
-    "    fb = torch.mean(\n",
-    "        (precision*recall).\n",
-    "        div_(precision.mul(beta2) + recall + eps).\n",
-    "        mul_(1 + beta2))\n",
-    "    return fb"
+    "    true_positive = (y_pred * y_true).sum()\n",
+    "    precision = true_positive/(y_pred.sum()+(eps))\n",
+    "    recall = true_positive/(y_true.sum()+eps)\n",
+    "    \n",
+    "    fb = (precision*recall)/(precision*beta2 + recall + eps)*(1+beta2)\n",
+    "    \n",
+    "    return fb, precision, recall"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,13 +809,13 @@
     "#     learn.crit=nn.CrossEntropyLoss()\n",
     "#     learn.crit=FocalLoss(2)\n",
     "#     learn.crit = nn.BCEWithLogitsLoss()\n",
-    "    learn.metrics=[new_acc, car_f, rd_f]\n",
+    "    learn.metrics=[new_acc, rd_f, car_f_p_r]\n",
     "    return learn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -844,9 +823,9 @@
      "output_type": "stream",
      "text": [
       "Valx: 300, Valy: 300\n",
-      "Trnx: 7980, Trny: 7980\n",
-      "Testx: 1000\n",
-      "Allx: 7280\n"
+      "Trnx: 4300, Trny: 4300\n",
+      "Testx: 0\n",
+      "Allx: 4600\n"
      ]
     }
    ],
@@ -859,16 +838,16 @@
     "# bs=24\n",
     "# md = torch_loader(ext, PATH, bs, sz)\n",
     "ext = '-150'\n",
-    "sz = 96\n",
-    "bs = 256\n",
-    "md = torch_loader('-150', PATH, bs, sz, random_crop=True)\n",
+    "sz = 96*4\n",
+    "bs = 8\n",
+    "md = torch_loader('', PATH, bs, sz, random_crop=True)\n",
     "\n",
     "learn = get_learner(md)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,13 +856,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn.load('600urn-19-weights-26-r8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2511e0a4d36f4ee1b2dfbd46e4d6bc95",
+       "model_id": "1691fbfc4e9e4099b0e2c0b57f79788c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -898,18 +886,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch      trn_loss   val_loss   new_acc    car_f      rd_f       \n",
-      "    0      0.91196    0.122503   0.977066   0.064683   0.782682  \n",
+      "epoch      trn_loss   val_loss   new_acc    rd_f       car_f      \n",
+      "    0      0.202259   0.011607   0.996088   0.998063   0.911708   0.757538   0.970531  \n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([0.1225]), 0.9770659685134888, 0.06468346912413836, 0.7826816360155742]"
+       "[array([0.01161]),\n",
+       " 0.9960879302024841,\n",
+       " 0.998062632543667,\n",
+       " 0.91170782918616,\n",
+       " 0.757538283881492,\n",
+       " 0.9705305521222899]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
