--- a/workspace/Example/Score-Unet.ipynb
+++ b/workspace/Example/Score-Unet.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,9 +80,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Car F score: 0.654  | Car Precision: 0.583  | Car Recall: 0.675  |\n",
-      "Road F score: 0.931 | Road Precision: 0.921 | Road Recall: 0.973 | \n",
-      "Averaged F score: 0.793\n"
+      "Car F score: 0.452  | Car Precision: 0.177  | Car Recall: 0.736  |\n",
+      "Road F score: 0.748 | Road Precision: 0.715 | Road Recall: 0.915 | \n",
+      "Averaged F score: 0.600\n"
      ]
     }
    ],
@@ -149,6 +149,18 @@
     "print (\"Car F score: %05.3f  | Car Precision: %05.3f  | Car Recall: %05.3f  |\\n\\\n",
     "Road F score: %05.3f | Road Precision: %05.3f | Road Recall: %05.3f | \\n\\\n",
     "Averaged F score: %05.3f\" %(Car_F,Car_precision,Car_recall,Road_F,Road_precision,Road_recall,((Car_F+Road_F)/2.0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unet11 - train35  \n",
+    "Car F score: 0.452  | Car Precision: 0.177  | Car Recall: 0.736  |\n",
+    "Road F score: 0.748 | Road Precision: 0.715 | Road Recall: 0.915 | \n",
+    "Averaged F score: 0.600"
    ]
   },
   {
