--- a/workspace/Example/lyft-setup-5-carla-all-subset.ipynb
+++ b/workspace/Example/lyft-setup-5-carla-all-subset.ipynb
@@ -54,6 +54,8 @@
     "CARLA_3_PATH = Path('../data/Carla3')\n",
     "CARLA_4_PATH = Path('../data/Carla4')\n",
     "CARLA_5_PATH = Path('../data/Carla5')\n",
+    "CARLA_6_PATH = Path('../data/Carla6')\n",
+    "CARLA_7_PATH = Path('../data/Carla7')\n",
     "OLD_PATH = Path('../data/all.old')\n",
     "ALL_PATH = Path('../data/all')"
    ]
@@ -1358,17 +1360,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_names = glob(str(CARLA_4_PATH/'*/*/*.png'))\n",
+    "c_names = glob(str(CARLA_5_PATH/'*/*/*.png'))\n",
     "for f in c_names:\n",
     "    f_pt = Path(f).parts\n",
     "    fn = f_pt[-1]\n",
     "    skip = int(fn[-5])%4 != 0\n",
     "    if skip: continue\n",
     "    targ_path = ALL_PATH/f_pt[4]/('c5_'+f_pt[3]+'_'+f_pt[-1])\n",
+    "#     print(targ_path)\n",
+    "    shutil.copy2(f, str(targ_path))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Carla 6, 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10880, 10880)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(glob(str(ALL_PATH/(TRAIN_DN+'-150')/'*.png'))), len(glob(str(ALL_PATH/MASKS_DN/'*.png')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_names = glob(str(CARLA_6_PATH/'*/*/*.png'))\n",
+    "for f in c_names:\n",
+    "    f_pt = Path(f).parts\n",
+    "    fn = f_pt[-1]\n",
+    "    skip = int(fn[-5])%4 != 0\n",
+    "    if skip: continue\n",
+    "    targ_path = ALL_PATH/f_pt[4]/('c6_'+f_pt[3]+'_'+f_pt[-1])\n",
+    "#     print(targ_path)\n",
+    "    shutil.copy2(f, str(targ_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_names = glob(str(CARLA_7_PATH/'*/*/*.png'))\n",
+    "for f in c_names:\n",
+    "    f_pt = Path(f).parts\n",
+    "    fn = f_pt[-1]\n",
+    "    skip = int(fn[-5])%4 != 0\n",
+    "    if skip: continue\n",
+    "    targ_path = ALL_PATH/f_pt[4]/('c7_'+f_pt[3]+'_'+f_pt[-1])\n",
     "#     print(targ_path)\n",
     "    shutil.copy2(f, str(targ_path))"
    ]
@@ -1441,13 +1504,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "TRAIN_DN = 'CameraRGB'\n",
     "MASKS_DN = 'CameraSeg'\n",
-    "sz = 300\n",
+    "sz = 150\n",
     "bs = 64\n",
     "ratio = 4/3"
    ]
@@ -1492,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
